--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 * {
   box-sizing: border-box;
+}
+body {
+  margin: 0;
+  overflow: hidden;
   font-family: "Arial", sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
   list-style-type: none;
 }
 
@@ -12,21 +23,26 @@ a {
   color: white;
 }
 
-.container0 {
+.header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding: 16px;
 }
 
-.logo {
-  padding-left: 75px;
+.footer {
+  display: flex;
+  padding: 16px;
+  justify-content: center;
 }
 
-.link-list {
+.container1 {
+  flex: 1 0 auto;
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-right: 200px;
+  justify-content: center;
+  flex-direction: column;
 }
+
+
 
 
