--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 * {
   box-sizing: border-box;
-}
-body {
   margin: 0;
+  padding: 0;
+  font-family: ’Arial’, sans-serif;
+}
+
+body {
   overflow: hidden;
-  font-family: "Arial", sans-serif;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+img {
+  width: 200px;
+  height: 200px;
 }
 
 ul {
@@ -23,9 +30,20 @@ a {
   color: white;
 }
 
+button {
+  background-color: #3882f6;
+  border: none;
+  color: white;
+  text-decoration: none;
+  border-color: #3882f6;
+  padding: 10px;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 16px;
 }
 
@@ -35,14 +53,42 @@ a {
   justify-content: center;
 }
 
-.container1 {
-  flex: 1 0 auto;
+.container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  flex-flow: column wrap;
+  flex: 1;
+  padding: 16px;
+  justify-content: space-between;
 }
 
+.container1 {
+  display: flex;
+  flex: auto;
+  justify-content: space-around;
+  flex-direction: row;
+  border: 10px solid goldenrod;
+}
 
+.container3 {
+  display: flex;
+  flex: auto;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+  border: 10px solid goldenrod;
+}
 
+.sign-up-button {
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  width: 45%;
+}
 
+.text {
+  text-align: center;
+}
+
+.arts-container {
+  display: flex;
+}
