--- a/style.css
+++ b/style.css
@@ -2,18 +2,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: ’Arial’, sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
 body {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  text-align: center;
 }
 
 img {
-  width: 200px;
+  width: 300px;
   height: 200px;
 }
 
@@ -35,73 +34,123 @@ button {
   border: none;
   color: white;
   text-decoration: none;
-  border-color: #3882f6;
   padding: 10px;
   font-size: 16px;
   margin: 4px 2px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+
 .header {
   display: flex;
   justify-content: space-around;
   padding: 16px;
+  background-color: #1F2937;
 }
 
 .footer {
   display: flex;
   padding: 16px;
   justify-content: center;
+  background-color: #1F2937;
+  color: white;
 }
 
 .container {
   display: flex;
-  flex-flow: column wrap;
   flex: 1;
-  padding: 16px;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .container1 {
   display: flex;
-  flex: auto;
+  flex: 1;
   justify-content: space-around;
-  flex-direction: row;
-  border: 10px solid goldenrod;
+  background-color: #1F2937;
 }
 
 .container2 {
   display: flex;
-  flex: auto;
-  align-items: center;
-  justify-content: center;
-  gap: 48px;
-  border: 10px solid goldenrod;
+  flex: 1;
+  justify-content: space-around;
 }
 
 .container3 {
   display: flex;
-  flex: auto;
+  flex: 1;
   align-items: center;
   justify-content: center;
-  border: 10px solid goldenrod;
+  background: #E5E7EB
 }
 
 .container4 {
   display: flex;
-  flex: auto;
-  align-items: center;
+  flex: 1;
   justify-content: center;
-  border: 10px solid goldenrod;
+}
+
+.title{
+  font-size: 48px;
+  font-weight: 800;
+  color: #f9faf8;
+}
+
+
+.header-text,
+.link-list {
+  font-size: 18px;
+  color: #E5E7EB;
+}
+
+.header-logo {
+  font-size: 24px;
+  color: #f9faf8;
+}
+
+.information-header {
+  font-size: 36px;
+  font-weight: 800;
+  color: #1F2937;
+}
+
+.quote {
+  font-size: 36px;
+  font-family: "light italic";
+  color: #1F2937;
+}
+
+.first-image {
+  width: 300px;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
 }
 
 .sign-up-button {
   border-radius: 10px;
-  font-weight: bold;
   cursor: pointer;
-  width: 45%;
+  width: 15%;
 }
 
-
-.arts-container {
+.text {
   display: flex;
+  flex-direction: column;
+}
+
+.blue-box {
+  background-color: #3882f6;
+  border: none;
+  border-radius: 10px;
+  padding: 30px;
+  margin: 30px;
+  text-align: start;
+  color: white;
 }
