Refactored html and completed site layout

--- a/style.css
+++ b/style.css
@@ -36,13 +36,11 @@ button {
   text-decoration: none;
   padding: 10px;
   font-size: 16px;
-  margin: 4px 2px;
 }
 
 .bold {
   font-weight: bold;
 }
-
 
 .header {
   display: flex;
@@ -62,36 +60,47 @@ button {
 .container {
   display: flex;
   flex: 1;
-  justify-content: center;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .container1 {
   display: flex;
-  flex: 1;
+  flex: 250px;
   justify-content: space-around;
   background-color: #1F2937;
+  padding-bottom: 200px;
 }
 
 .container2 {
   display: flex;
-  flex: 1;
+  flex: 250px;
   justify-content: space-around;
 }
 
 .container3 {
   display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-  background: #E5E7EB
+  flex: 250px;
+  flex-direction: column;
+  background: #E5E7EB;
+  padding: 0 200px;
 }
 
 .container4 {
   display: flex;
-  flex: 1;
+  flex: 250px;
   justify-content: center;
+}
+
+.description {
+  text-align: start;
+  padding-top: 100px;
+}
+
+.first-image {
+  margin-top: 100px;
+  width: 500px;
+  height: 300px;
 }
 
 .title{
@@ -99,7 +108,6 @@ button {
   font-weight: 800;
   color: #f9faf8;
 }
-
 
 .header-text,
 .link-list {
@@ -116,41 +124,47 @@ button {
   font-size: 36px;
   font-weight: 800;
   color: #1F2937;
+  margin: 100px;
 }
 
 .quote {
   font-size: 36px;
+  margin-top: 50px;
+  text-align: start;
   font-family: "light italic";
   color: #1F2937;
 }
 
-.first-image {
-  width: 300px;
-}
-
-.description {
-  display: flex;
-  flex-direction: column;
-  text-align: start;
+.quote2 {
+  text-align: end;
+  font-size: 24px;
+  font-family: "light italic";
+  color: #1F2937;
 }
 
 .sign-up-button {
   border-radius: 10px;
   cursor: pointer;
-  width: 15%;
-}
-
-.text {
-  display: flex;
-  flex-direction: column;
+  width: 30%;
+  margin-top: 10px;
 }
 
 .blue-box {
+  display: flex;
   background-color: #3882f6;
   border: none;
+  height: 125px;
+  width: 1000px;
   border-radius: 10px;
   padding: 30px;
   margin: 30px;
   text-align: start;
   color: white;
+}
+
+.call-to-action-button {
+  display: flex;
+  height: 50px;
+  align-content: flex-end;
+  justify-content: flex-end;
 }
